Added Prototype Project

--- a/index.html
+++ b/index.html
@@ -1,16 +1,17 @@
 <!doctype html>
-
 <html lang="en">
 <head>
   <meta charset="utf-8">
-
   <title>IFSC 1310 | Derrick Miller</title>
   <meta name="description" content="Keyword Rich Description">
   <meta name="author" content="Derrick Miller">
-
 </head>
-
 <body>
   <h1>Derrick Miller</h1>
+  <nav
+  <ul
+   <li<a href="prototype/index.html" "First HTML Assignment"</a></a></li>
+</ul>
+</nav>
 </body>
 </html>
